--- a/package.json
+++ b/package.json
@@ -6,7 +6,8 @@
     "materialize-css": "^1.0.0-rc.2",
     "react": "^16.8.1",
     "react-dom": "^16.8.1",
-    "react-scripts": "2.1.4"
+    "react-scripts": "2.1.4",
+    "typescript": "^3.3.3"
   },
   "scripts": {
     "start": "react-scripts start",
